--- a/app/src/main/res/drawable/btn_round.xml
+++ b/app/src/main/res/drawable/btn_round.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="#005792"
-        android:endColor="#005792"
+        android:startColor="#3032A0"
+        android:endColor="#3032A0"
         android:angle="90"/>
     <corners
         android:radius="30dp"/>
