--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -11,8 +11,8 @@
 
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorBlue">
+        android:layout_height="?actionBarSize"
+        android:background="@drawable/toolbar_history_mhs">
 
         <TextView
             android:layout_width="wrap_content"
