--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,98 +6,92 @@
     android:layout_height="match_parent"
     tools:context=".activity.LoginActivity"
     android:orientation="vertical"
+    android:padding="16dp"
     android:background="@android:color/white"
     android:fitsSystemWindows="true">
 
     <LinearLayout
-        android:layout_weight="1"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:orientation="vertical"
-        android:background="@color/colorBlue">
+        android:layout_weight="1"
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/imageVIew"
-            android:layout_marginTop="15dp"
-            android:layout_centerHorizontal="true"
-            android:src="@drawable/icon_mangab"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.6"/>
+            android:layout_centerHorizontal="true"
+            android:layout_weight="0.6"
+            android:layout_marginTop="16dp"
+            android:src="@drawable/icon_login" />
 
         <TextView
-            android:textColor="@android:color/white"
-            android:layout_gravity="center"
-            android:text="MaNgab"
-            android:textSize="25sp"
-            android:textAlignment="center"
-            android:fontFamily="@font/montserrat_bold"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:textColor="@android:color/white"
-            android:layout_gravity="center"
-            android:text="Mahasiswa Ngabsen"
-            android:textSize="15sp"
-            android:textAlignment="center"
-            android:fontFamily="@font/montserrat_semibold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"/>
+            android:layout_gravity="center"
+            android:fontFamily="@font/montserrat_bold"
+            android:text="Login"
+            android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textColor="#3032A0" />
+
     </LinearLayout>
 
     <LinearLayout
-        android:layout_weight="1"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="@android:color/white"
         android:orientation="vertical"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:padding="20dp"
-        android:background="@android:color/white">
+        android:padding="20dp">
+
         <TextView
-            android:layout_marginTop="5dp"
-            android:text="NRP / NIP"
-            android:fontFamily="@font/montserrat_light"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:fontFamily="@font/montserrat_light"
+            android:text="NRP" />
+
         <EditText
             android:id="@+id/etNRP"
-            android:drawablePadding="20dp"
-            android:drawableRight="@drawable/ic_recent_actors_black_24dp"
-            android:hint="********"
-            android:fontFamily="@font/montserrat_semibold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:drawableRight="@drawable/ic_recent_actors_black_24dp"
+            android:drawablePadding="20dp"
+            android:fontFamily="@font/montserrat_semibold"
+            android:hint="12345"
             android:inputType="number"
-            android:maxLines="1"/>
+            android:maxLines="1" />
+
         <TextView
-            android:layout_marginTop="5dp"
-            android:text="Password"
-            android:fontFamily="@font/montserrat_light"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:fontFamily="@font/montserrat_light"
+            android:text="Password" />
+
         <EditText
             android:id="@+id/etPassword"
-            android:drawablePadding="20dp"
-            android:drawableRight="@drawable/ic_lock_black_24dp"
-            android:hint="********"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:drawableRight="@drawable/ic_lock_black_24dp"
+            android:drawablePadding="20dp"
             android:fontFamily="@font/montserrat_semibold"
+            android:hint="******"
             android:inputType="textPassword"
-            android:maxLines="1"/>
+            android:maxLines="1" />
+
         <Button
             android:id="@+id/btnLogin"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textColor="#FFF"
-            android:background="@drawable/btn_round"
-            android:layout_marginTop="20dp"
-            android:textAllCaps="false"
-            android:text="Login"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/btn_round"
             android:fontFamily="@font/montserrat_bold"
-            android:layout_height="wrap_content" />
+            android:text="Login"
+            android:textAllCaps="false"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textColor="#FFF" />
     </LinearLayout>
 
 </LinearLayout>
