--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -8,12 +8,11 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:layout_weight="0.1"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="?android:attr/actionBarSize"
         android:orientation="vertical"
         android:gravity="center"
-        android:background="@color/colorBlue">
+        android:background="@drawable/toolbar_history_mhs">
         <TextView
             android:textColor="@android:color/white"
             android:layout_width="wrap_content"
@@ -45,9 +44,10 @@
         android:padding="16dp">
 
         <TextView
-            android:textColor="@color/colorBlue"
-            android:layout_width="wrap_content"
+            android:textColor="@color/colorPrimary"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:text="List of Students Attent"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:fontFamily="@font/montserrat_semibold"
