--- a/app/src/main/res/layout/activity_scan_result.xml
+++ b/app/src/main/res/layout/activity_scan_result.xml
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="tes"
+        android:text="Message"
         android:fontFamily="@font/montserrat_semibold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
