--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -1,53 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.SplashScreenActivity"
-    android:background="@color/colorBlue"
     android:fitsSystemWindows="true"
-    android:gravity="center"
+    android:gravity="bottom"
     android:orientation="vertical">
 
     <ImageView
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-
-        android:src="@drawable/icon_mangab"/>
-
-    <TextView
-        android:textColor="@android:color/white"
-        android:layout_gravity="center"
-        android:text="MaNgab"
-        android:textSize="25sp"
-        android:textAlignment="center"
-        android:fontFamily="@font/montserrat_bold"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:textColor="@android:color/white"
-        android:layout_gravity="center"
-        android:text="Mahasiswa Ngabsen"
-        android:textSize="15sp"
-        android:textAlignment="center"
-        android:fontFamily="@font/montserrat_semibold"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/splash"
+        android:scaleType="fitXY"
+        android:adjustViewBounds="true"/>
 
     <Button
-        android:visibility="gone"
         android:id="@+id/btnRetry"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="32dp"
         android:background="@drawable/btn_round_white"
         android:fontFamily="@font/montserrat_bold"
         android:text="Retry"
         android:textAllCaps="false"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="#005792" />
+        android:textColor="#3032A0"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
