--- a/app/src/main/res/layout/row_history.xml
+++ b/app/src/main/res/layout/row_history.xml
@@ -14,12 +14,13 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorBlue">
+            android:background="@color/colorAccent"
+            android:padding="10dp">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/icon_book2"
+                android:src="@drawable/ic_book"
                 android:layout_marginEnd="10dp"
                 android:layout_marginStart="10dp"/>
 
@@ -37,12 +38,12 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="5dp">
+            android:layout_marginTop="10dp">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/icon_clock"
+                android:src="@drawable/ic_clock"
                 android:layout_marginEnd="10dp"
                 android:layout_marginStart="10dp"/>
 
@@ -51,22 +52,44 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="12 Desember 2019 10:10"
-                android:fontFamily="@font/montserrat_semibold"
+                android:fontFamily="@font/montserrat_light"
                 android:layout_gravity="center_vertical"
                 android:textSize="12sp"
                 android:textColor="@color/colorText"/>
         </LinearLayout>
 
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="2dp">
+            android:layout_marginTop="10dp">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/icon_status"
+                android:src="@drawable/ic_room"
+                android:layout_marginEnd="10dp"
+                android:layout_marginStart="10dp"/>
+
+            <TextView
+                android:id="@+id/tvRoom"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="A.1.1"
+                android:fontFamily="@font/montserrat_light"
+                android:layout_gravity="center_vertical"
+                android:textSize="12sp"
+                android:textColor="@color/colorText"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_draft"
                 android:layout_marginEnd="10dp"
                 android:layout_marginStart="10dp"/>
 
@@ -74,8 +97,8 @@
                 android:id="@+id/tvTopik"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Hadir"
-                android:fontFamily="@font/montserrat_semibold"
+                android:text="Topik"
+                android:fontFamily="@font/montserrat_light"
                 android:layout_gravity="center_vertical"
                 android:textSize="12sp"
                 android:textColor="@color/colorText"/>
