--- a/app/src/main/res/layout/row_history_mhs.xml
+++ b/app/src/main/res/layout/row_history_mhs.xml
@@ -14,14 +14,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorBlue">
+            android:background="@color/colorAccent"
+            android:gravity="center_vertical"
+            android:padding="10dp">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/icon_book2"
-                android:layout_marginEnd="10dp"
-                android:layout_marginStart="10dp"/>
+                android:src="@drawable/ic_book"
+                android:layout_marginEnd="10dp"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -37,12 +38,12 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="5dp">
+            android:layout_marginTop="10dp">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/icon_clock"
+                android:src="@drawable/ic_clock"
                 android:layout_marginEnd="10dp"
                 android:layout_marginStart="10dp"/>
 
@@ -50,7 +51,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="12 Desember 2019 10:10"
-                android:fontFamily="@font/montserrat_semibold"
+                android:fontFamily="@font/montserrat_light"
                 android:layout_gravity="center_vertical"
                 android:id="@+id/tvAbsen"
                 android:textSize="12sp"
@@ -60,12 +61,12 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="2dp">
+            android:layout_marginTop="10dp">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/icon_dosen"
+                android:src="@drawable/ic_person"
                 android:layout_marginEnd="10dp"
                 android:layout_marginStart="10dp"/>
 
@@ -73,7 +74,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Nama Dosen"
-                android:fontFamily="@font/montserrat_semibold"
+                android:fontFamily="@font/montserrat_light"
                 android:layout_gravity="center_vertical"
                 android:id="@+id/tvNamaDosen"
                 android:textSize="12sp"
@@ -83,12 +84,12 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="2dp">
+            android:layout_marginTop="10dp">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/icon_status"
+                android:src="@drawable/ic_draft"
                 android:layout_marginEnd="10dp"
                 android:layout_marginStart="10dp"/>
 
@@ -96,7 +97,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Hadir"
-                android:fontFamily="@font/montserrat_semibold"
+                android:fontFamily="@font/montserrat_light"
                 android:layout_gravity="center_vertical"
                 android:id="@+id/tvStatusKehadiran"
                 android:textSize="12sp"
