--- a/app/src/main/res/layout/row_rekap.xml
+++ b/app/src/main/res/layout/row_rekap.xml
@@ -21,7 +21,7 @@
 
             <TextView
                 android:id="@+id/tvNRP"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/montserrat_light"
                 android:layout_marginBottom="5dp"
@@ -31,54 +31,55 @@
 
             <TextView
                 android:id="@+id/tvName"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/montserrat_semibold"
-                android:layout_marginBottom="5dp"
+                android:layout_marginBottom="10dp"
                 android:text="Nama"
                 android:textColor="@color/colorText"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small" />
 
-            <TextView
-                android:id="@+id/tvStatus"
-                android:layout_width="wrap_content"
+            <RadioGroup
+                android:id="@+id/rgStatus"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/montserrat_semibold"
-                android:text="( Status )"
-                android:textColor="@color/colorText"
-                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
-        </LinearLayout>
+                android:orientation="horizontal">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1.5"
-            android:gravity="center"
-            android:orientation="horizontal">
+                <RadioButton
+                    android:id="@+id/rbHadir"
+                    android:layout_width="match_parent"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/montserrat_semibold"
+                    android:text="Hadir"/>
 
-            <Button
-                android:id="@+id/btnIzin"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:layout_weight="1"
-                android:background="@color/colorIzin"
-                android:fontFamily="@font/montserrat_semibold"
-                android:textAllCaps="false"
-                android:text="Izin"
-                android:textColor="#ffffff" />
+                <RadioButton
+                    android:id="@+id/rbSakit"
+                    android:layout_width="match_parent"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/montserrat_semibold"
+                    android:text="Sakit"/>
 
-            <Button
-                android:id="@+id/btnSakit"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@color/colorTugas"
-                android:fontFamily="@font/montserrat_semibold"
-                android:textAllCaps="false"
-                android:text="Sakit"
-                android:textColor="#ffffff"
-                android:layout_marginEnd="8dp"/>
+                <RadioButton
+                    android:id="@+id/rbIjin"
+                    android:layout_width="match_parent"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/montserrat_semibold"
+                    android:text="Ijin"/>
+
+                <RadioButton
+                    android:id="@+id/rbAlpa"
+                    android:layout_width="match_parent"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/montserrat_semibold"
+                    android:checked="true"
+                    android:text="Alpa"/>
+
+            </RadioGroup>
+
         </LinearLayout>
 
     </LinearLayout>
