--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#005792</color>
-    <color name="colorPrimaryDark">#005792</color>
-    <color name="colorAccent">#0098FF</color>
+    <color name="colorPrimary">#3032A0</color>
+    <color name="colorPrimaryDark">#3032A0</color>
+    <color name="colorAccent">#FF8535</color>
     <color name="colorText">#504F60</color>
-    <color name="colorBlue">#005792</color>
-    <color name="colorBlueNeon">#033fff</color>
-    <color name="colorBlueLight">#53cde2</color>
+    <color name="colorBlue">#920000</color>
+    <color name="colorBlueNeon">#FF0303</color>
+    <color name="colorBlueLight">#E25353</color>
     <color name="bgCardview">#F9FAFA</color>
     <color name="colorIzin">#4CAF50</color>
     <color name="colorSakit">#F44336</color>
