--- a/app/src/main/res/layout/activity_generate.xml
+++ b/app/src/main/res/layout/activity_generate.xml
@@ -124,19 +124,6 @@
                     android:drawablePadding="20dp"
                     android:fontFamily="@font/montserrat_semibold" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:fontFamily="@font/montserrat_semibold"
-                    android:text="Room"
-                    android:visibility="gone" />
-
-                <EditText
-                    android:id="@+id/etRoom"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:visibility="gone" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -149,6 +136,39 @@
                     android:id="@+id/etTopic"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:fontFamily="@font/montserrat_semibold"
+                    android:text="Class Type" />
+
+                <RadioGroup
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:weightSum="2"
+                    android:id="@+id/rgType">
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:id="@+id/rbOffline"
+                        android:text="Offline"
+                        android:fontFamily="@font/montserrat_semibold"
+                        />
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:id="@+id/rbOnline"
+                        android:text="Online"
+                        android:fontFamily="@font/montserrat_semibold"
+                        />
+
+                </RadioGroup>
+
 
                 <Button
                     android:id="@+id/btnGenerate"
