--- a/app/src/main/res/drawable/btn_round_orange.xml
+++ b/app/src/main/res/drawable/btn_round_orange.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="@color/colorPrimary"
-        android:endColor="@color/colorPrimary"
+        android:startColor="@color/colorAccent"
+        android:endColor="@color/colorAccent"
         android:angle="90"/>
     <corners
         android:radius="30dp"/>
