--- a/app/src/main/res/layout/activity_enter_code.xml
+++ b/app/src/main/res/layout/activity_enter_code.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.EnterCodeActivity"
+    tools:context="id.ac.stiki.doleno.mangab.activity.EnterCodeActivity"
     android:padding="16dp">
 
     <ImageView
