--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity.AboutActivity">
+    tools:context="id.ac.stiki.doleno.mangab.activity.AboutActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
