--- a/app/src/main/res/layout/activity_generate.xml
+++ b/app/src/main/res/layout/activity_generate.xml
@@ -11,7 +11,7 @@
         android:background="@android:color/white"
         android:orientation="vertical"
         android:padding="16dp"
-        tools:context="activity.GenerateActivity">
+        tools:context="id.ac.stiki.doleno.mangab.activity.GenerateActivity">
 
         <LinearLayout
             android:layout_width="match_parent"
