--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity.HelpActivity">
+    tools:context="id.ac.stiki.doleno.mangab.activity.HelpActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/tbHelp"
