--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
     android:background="@android:color/white"
     android:fitsSystemWindows="true"
     android:orientation="vertical"
-    tools:context=".activity.LoginActivity">
+    tools:context="id.ac.stiki.doleno.mangab.activity.LoginActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
