--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".activity.MainActivity"
+    tools:context="id.ac.stiki.doleno.mangab.activity.MainActivity"
     android:fitsSystemWindows="true"
     android:background="@android:color/white">
 
