--- a/app/src/main/res/layout/activity_rekap.xml
+++ b/app/src/main/res/layout/activity_rekap.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity.RekapActivity"
+    tools:context="id.ac.stiki.doleno.mangab.activity.RekapActivity"
     android:padding="16dp">
 
     <androidx.recyclerview.widget.RecyclerView
