--- a/app/src/main/res/layout/fragment_recent_history.xml
+++ b/app/src/main/res/layout/fragment_recent_history.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.RecentHistoryFragment">
+    tools:context="id.ac.stiki.doleno.mangab.fragment.RecentHistoryFragment">
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/srlHistory"
