--- a/app/src/main/res/layout/fragment_summary_history.xml
+++ b/app/src/main/res/layout/fragment_summary_history.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.SummaryHistoryFragment">
+    tools:context="id.ac.stiki.doleno.mangab.fragment.SummaryHistoryFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
